inclusão do cadastro do pet

--- a/parceiro.html
+++ b/parceiro.html
@@ -10,7 +10,28 @@
    </head>
    <body> 
 	<header>
-
+      <div class="conteudo">
+         <nav>	
+            <p class="brand">
+               NOME <strong> MANEIRO </strong> 
+            </p>
+            
+            <!-- Lista de itens da barra de navegação -->
+            <ul>
+               <li><a href="site.html"> Hospedagens </a></li>
+               <li><a href="parceiro.html"> Seja Parceiro </a></li>
+               <li><a href="sobrenos.html"> Sobre Nós </a></li>
+               <button>Login</button>
+            </ul>
+         </nav>	
+         <div class="header-block">
+            <div class="text">
+               <h2>Anuncie sua hospedagem aqui!</h2>
+               <p> Um texto movivando a pessoa a ser parceiro!</p>
+         </div>
+         <div>
+            <img src="hotel.jpg">
+         </div>
 	</header>
 	
    </body>
