--- a/site.html
+++ b/site.html
@@ -18,16 +18,18 @@
 		
 		<!-- Lista de itens da barra de navegação -->
 		<ul>
-			<li><a href="#hospedagens"> Hospedagens </a></li>
+			<li><a href="site.html"> Hospedagens </a></li>
 			<li><a href="parceiro.html"> Seja Parceiro </a></li>
 			<li><a href="sobrenos.html"> Sobre Nós </a></li>
+			<a href="telalogin.html">
 			<button>Login</button>
+		</a>
 		</ul>
 	</nav>	
 	<section class="catalogo" id="catalogo">
 		<div class="conteudo">
 			<div class="busca-catalogo"> </div>
-			<p>Encontre a estadia do seu pet!</p>
+			<h2>Encontre a estadia do seu pet!</h2> <br>
 			<h3>Hospedagens</h3>
 		</div>
 		<!-- Botão para busca-->
@@ -36,7 +38,7 @@
 			<input type="date" class="buscacheckin" placeholder="Check In">	
 			<input type="date" class="buscacheckout" placeholder="Check Out">
 			<input type="number" class="buscaqtdhospedes" placeholder="Qtd. de hospedes">
-			<button class="buscabotao">Buscar</button>
+			<button class="buscabotao">Buscar </button>
 		</div>
 
 	</header>
