--- a/sobrenos.html
+++ b/sobrenos.html
@@ -1,17 +1,39 @@
 <!DOCTYPR html>
 
-<html>
+   <html>
    <!-- Este é um comentario no html fora do body -->
-   <head>
-      <title> Sobre nós </title> 
-      <meta charset="utf-8" />
-   <!-- habilitando arquivo CSS -->
-      <link rel="stylesheet" href="estilos.css">	
-   </head>
-   <body> 
-	<header>
 
-	</header>
-	
+   <head>
+      <title> Sobre nós </title>
+      <meta charset="utf-8" />
+      <!-- habilitando arquivo CSS -->
+      <link rel="stylesheet" href="estilos.css">
+   </head>
+
+   <body>
+      <header>
+         <div class="conteudo">
+            <nav>
+               <p class="brand">
+                  NOME <strong> MANEIRO </strong>
+               </p>
+
+               <!-- Lista de itens da barra de navegação -->
+               <ul>
+                  <li><a href="site.html"> Hospedagens </a></li>
+                  <li><a href="parceiro.html"> Seja Parceiro </a></li>
+                  <li><a href="sobrenos.html"> Sobre Nós </a></li>
+                  <button>Login</button>
+               </ul>
+            </nav>
+            <div class="header-block-sobrenos">
+               <div class="text-sobrenos">
+                  <h2>Conheça o nome da empresa</h2>
+                  <p>O nome da empresa oferece aos donos de pets uma ampla seleção de acomodações. Nós oferecemos um
+                     fonte completa de preços, comodidades e disponibilidade! </p>
+               </div>
+      </header>
+
    </body>
-</html>
+
+   </html>
