--- a/cadastrodonodopet.html
+++ b/cadastrodonodopet.html
@@ -24,20 +24,22 @@
                         <!--Criar uma div para cada input-->
                         <div class="inputbox">
                             <!--Required é campo obrigatorio-->
-                            <input type="text" name="nomedonopet" id="nomedonopet" class="inputdonodopet" placeholder="Digite seu nome!" required>
+                            <input type="text" name="nomedonopet" id="nomedonopet" class="inputdonodopet"
+                                placeholder="Digite seu nome!" required>
                             <label for="nomedonopet">Nome Completo </label>
-                        </div>
+                        </div> <br>
                         <div class="inputbox">
                             <!--Required é campo obrigatorio-->
-                            <input type="text" name="cpfdonopet" id="cpfdonopet" class="inputdonodopett" placeholder="Digite seu CPF!"required>
+                            <input type="text" name="cpfdonopet" id="cpfdonopet" class="inputdonodopett"
+                                placeholder="Digite seu CPF!" required>
                             <label for="cpfdonopet">CPF</label>
-                        </div>
+                        </div> <br>
                         <div class="inputbox">
                             <!--Required é campo obrigatorio-->
-                            <input type="text" name="telefonedonopet" id="telefonedonopet" class="inputdonodopet" placeholder="Digite seu telefone!"
-                                required>
-                            <label for="cpfdonopet">CPF</label>
-                        </div>
+                            <input type="text" name="telefonedonopet" id="telefonedonopet" class="inputdonodopet"
+                                placeholder="Digite seu telefone!" required>
+                            <label for="cpfdonopet">Telefone</label>
+                        </div> <br>
                         <p>Sexo</p>
                         <input type="radio" id="feminino" name="genero" value="feminino" required>
                         <label for="feminino">Feminino</label>
@@ -48,26 +50,27 @@
                         <div class="inputbox">
                             <!--Required é campo obrigatorio-->
                             <label for="dtnascnedonopet">Data de Nascimento</label>
-                            <input type="date" name="dtnascnedonopet" id="dtnascnedonopet" class="inputdonodopet" 
+                            <input type="date" name="dtnascnedonopet" id="dtnascnedonopet" class="inputdonodopet"
                                 required>
-                        </div>
+                        </div> <br>
                         <div class="inputbox">
                             <!--Required é campo obrigatorio-->
-                            <input type="text" name="emaildonopet" id="emaildonopet" class="inputdonodopet" placeholder="Digite seu e-mail!" required>
+                            <input type="text" name="emaildonopet" id="emaildonopet" class="inputdonodopet"
+                                placeholder="Digite seu e-mail!" required>
                             <label for="emaildonopet">E-mail</label>
-                        </div>
+                        </div> <br>
                         <div class="inputbox">
                             <!--Required é campo obrigatorio-->
-                            <input type="password" name="senhadonopet" id="senhadonopet" class="inputdonodopet" placeholder="Digite sua senha!"
-                                required>
+                            <input type="password" name="senhadonopet" id="senhadonopet" class="inputdonodopet"
+                                placeholder="Digite sua senha!" required>
                             <label for="senhadonopet">Senha</label>
-                        </div>
+                        </div> <br>
                         <div class="inputbox">
                             <!--Required é campo obrigatorio-->
                             <input type="password" name="confirmacaosenhadonopet" id="confirmacaosenhadonopet"
-                                class="inputdonodopet" placeholder="Digite a senha novamente!"required>
+                                class="inputdonodopet" placeholder="Digite a senha novamente!" required>
                             <label for="confirmacaosenhadonopet">Digite a senha novamente</label>
-                        </div>
+                        </div> <br>
                         <div class="inputboxbotao">
                             <!--Required é campo obrigatorio-->
                             <button type="button" name="botaocadastrardonopet" id="botaocadastrardonopet"
