--- a/html/cadastrodonopet.html
+++ b/html/cadastrodonopet.html
@@ -79,10 +79,10 @@
       <p class="lead">Acho que não precisa de texto aqui</p>
     </div>
       <div class="col-md-7 col-lg-8">
-        <h4 class="mb-3">Acho que não precisa aqui tb</h4>
         <form class="needs-validation" novalidate>
           <div class="row g-3  col-md-8 offset-md-5">
             <div class="col-12 ">
+              <h4 class="mb-3">Informações do dono do Pet</h4>
               <label for="nomeDoDonoPet" class="form-label">Nome Completo</label>
               <input type="text" class="form-control" id="nomeDoDonoPet" placeholder="Digite o seu nome" value="" required>
               <!--Acho que não precisa<div class="invalid-feedback">
@@ -125,9 +125,9 @@
               </div>-->
             </div>
 
-            <h4 class="mb-3">Genero</h4>
+            <h4 class="mb-1">Genero</h4>
 
-            <div class="my-3">
+            <div class="my-2">
               <div class="form-check">
                 <input id="feminino" name="genero" type="radio" class="form-check-input" checked required>
                 <label class="form-check-label" for="feminino">Feminino</label>
@@ -143,6 +143,7 @@
             </div>
 
             <div class="col-12">
+              <h4 class="mb-3">Informações para acesso</h4>
                 <label for="emailDonoDoPet" class="form-label">E-mail</label>
                 <input type="email" class="form-control" id="emailDonoDoPet" placeholder="Digite seu e-mail" required>
                <!-- <div class="invalid-feedback">
