--- a/html/cadastroparceiro.html
+++ b/html/cadastroparceiro.html
@@ -128,6 +128,8 @@
               </div>-->
             </div>
 
+            <!--Colocar cadastro do endereço é obrigatorio-->
+
             <div class="col-md-12">
               <h4 class="mb-1">Serviços</h4>
               <div class="my-2 form-check form-check-inline">
