--- a/html/cadastrodopet.html
+++ b/html/cadastrodopet.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
+  <script src="../js/cadastrodopet.js" defer></script>
   <title>Cadastro do Pet</title>
 
 
@@ -81,12 +82,12 @@
         <p class="lead">Acho que não precisa de texto aqui</p>
       </div>
       <div class="col-md-7 col-lg-8">
-        <form class="needs-validation" novalidate>
+        <form action="" class="needs-validation" novalidate >
           <div class="row g-3  col-md-8 offset-md-5">
             <div class="col-12 ">
               <h4 class="mb-3">Informações do Pet</h4>
               <label for="nomeDoPet" class="form-label">Nome do Pet</label>
-              <input type="text" class="form-control" id="nomeDoPet" placeholder="Digite o nome do Pet" value=""
+              <input type="text" class="nomeDoPet" id="nomeDoPet" placeholder="Digite o nome do Pet" value=""
                 required>
               <!--Acho que não precisa<div class="invalid-feedback">
                 Valid first name is required.
