--- a/html/paginainicial.html
+++ b/html/paginainicial.html
@@ -42,5 +42,24 @@
       </div>
     </div>
   </header>
+
+  <div class="row align-items-center">
+    <div class="col-md-4 col-xs-4">
+  <label for="exampleFormControlInput1" class="form-label">Endereço</label>
+  <input type="text" class="form-control" id="endereco" placeholder="Digite o endereço">
+</div>
+<div class="col-md-auto col-xs-4">
+  <label for="exampleFormControlInput1" class="form-label">Data Check In</label>
+  <input type="date" class="form-control" id="dataCheckIn" placeholder="Digite o endereço">
+</div>
+<div class="col-md-auto col-xs-4">
+  <label for="exampleFormControlInput1" class="form-label">Data Check Out</label>
+  <input type="date" class="form-control" id="dataCheckOut" placeholder="Digite o endereço">
+</div>
+<div class="col align-self-end"> 
+<button class="btn btn-primary" type="submit">Confirmar reserva</button>
+</div>
+</div>
+
 </body>
 </html>
