--- a/html/cadastrodonopet.html
+++ b/html/cadastrodonopet.html
@@ -178,5 +178,7 @@
     <script src="../bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js"></script>
 
       <script src="../js/form-validation.js"></script>
+
+      <script src="../js/cadastrodonopet.js"></script>
   </body>
 </html>
