--- a/html/cadastrodonopet.html
+++ b/html/cadastrodonopet.html
@@ -64,6 +64,11 @@
     
     <!-- Custom styles for this template -->
     <link href="form-validation.css" rel="stylesheet">
+    <script type="text/javascript" src="js/jquery-1.2.6.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   </head>
   <body class="bg-light">
     <header class="p-3 mb-3 border-bottom">
@@ -124,14 +129,14 @@
                           </div>
                             <div class="form-group">
                               <label for="cpfDono" class="form-label">CPF</label>
-                              <input type="text" class="form-control" id="cpfDono" maxlength="14" onkeyup="mascara_cpf()" placeholder="Digite seu CPF" required>
+                              <input type="text" class="form-control" id="cpfDono" maxlength="14" onkeyup="$(this).mask('000.000.000-00')" placeholder="Digite seu CPF" required>
                               <div id="erro-cpf" class="invalid-feedback">
                                 Por favor, informe o CPF.
                               </div>  
                             </div>
                             <div class="form-group">
                               <label for="telefoneDono" class="form-label">Telefone</label>
-                              <input type="text" class="form-control" id="telefoneDono" placeholder="Digite seu telefone">
+                              <input type="text" class="form-control" id="telefoneDono" onkeypress="$(this).mask('(00) 0000-00009')" placeholder="Digite seu telefone">
                               <div class="invalid-feedback">
                                 Por favor, informe o telefone.
                               </div> 
