--- a/html/cadastrodopet.html
+++ b/html/cadastrodopet.html
@@ -65,6 +65,10 @@
 
   <!-- Custom styles for this template -->
   <link href="form-validation.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 <body class="bg-light"></body>
 <header class="p-3 mb-3 border-bottom">
@@ -175,7 +179,7 @@
                               </div>
                               <div class="form-group">
                                 <label for="pesoPet" class="form-label">Peso do Pet</label>
-                                <input type="number" class="form-control" id="pesoPet" placeholder="Digite o peso de pet" required>
+                                <input type="number" class="form-control" id="pesoPet" maxlength="5" onkeypress="$(this).mask('00,00', {reverse: true});" placeholder="Digite o peso de pet" required>
                                 <div class="invalid-feedback">
                                   Por favor, informe o peso.
                                 </div>
