--- a/html/cadastroparceiro.html
+++ b/html/cadastroparceiro.html
@@ -8,7 +8,10 @@
   <title>Cadastro do Parceiro</title>
 
   <link href="../bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <style>
     .bd-placeholder-img {
       font-size: 1.125rem;
@@ -119,12 +122,12 @@
                                 required>
                               </div>
                               <div class="form-group">
-                                <label for="cnpjCpfParceiro" class="form-label">CNPJ/CPF</label>
-                                <input type="text" class="form-control" id="cnpjCpfParceiro" placeholder="Digite seu CNPJ/CPF" required>
+                                <label for="cnpjParceiro" class="form-label">CNPJ</label>
+                                <input type="text" class="form-control" id="cnpjParceiro" onkeypress="$(this).mask('00.000.000/0000-00')" placeholder="Digite seu CNPJ" required>
                               </div>
                               <div class="form-group">
                                 <label for="telefoneParceiro" class="form-label">Telefone</label>
-                                <input type="text" class="form-control" id="telefoneParceiro" placeholder="Digite seu telefone">
+                                <input type="text" class="form-control" id="telefoneParceiro" onkeypress="$(this).mask('(00) 0000-00009')" placeholder="Digite seu telefone">
                               </div>
                               <div class="form-group">
                                 <label for="emailParceiro" class="form-label">E-mail</label>
@@ -162,7 +165,7 @@
                               </div>
                               <div class="form-group">
                                 <label for="cpfProprietario" class="form-label">CPF do Proprietario</label>
-                                <input type="text" class="form-control" id="cpfProprietario" placeholder="Digite CPF do proprietario"
+                                <input type="text" class="form-control" id="cpfProprietario" maxlength="14" onkeyup="$(this).mask('000.000.000-00')" placeholder="Digite CPF do proprietario"
                                   required>
                               </div>
                               <div class="form-group">
